# server/Service/Services/Interfaces/IGameService.cs
@@ -1,4 +1,5 @@
-﻿using Service.TransferModels.Responses;
+﻿using Service.TransferModels.Requests;
+using Service.TransferModels.Responses;
 
 namespace Service.Services.Interfaces;
 
@@ -7,7 +8,9 @@ public interface IGameService
     public GameResponseDTO NewGame(int prize);
     public GameResponseDTO NewGameFromMonday(int prize);
     public bool IsAnyGame();
-   public WinningNumbersResponseDTO SetWinningNumbers(Guid gameId, int[] winningNumbers);
-   public void UpdatePrizePool(decimal newPrizePool);
-   public List<GameResponseDTO> GetAllGames();
+    
+    public WinningNumbersResponseDTO SetWinningNumbers(WinningNumbersRequestDTO data);
+    
+    public void UpdatePrizePool(decimal newPrizePool);
+    public List<GameResponseDTO> GetAllGames();
 }
